--- a/src/SoundSync/index.css
+++ b/src/SoundSync/index.css
@@ -1,6 +1,8 @@
 .flex-col-container {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    background-color: #3EB489;
 }
 
 body {
