--- a/src/SoundSync/index.css
+++ b/src/SoundSync/index.css
@@ -1,7 +1,7 @@
 .flex-col-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    overflow-y: auto;
     background-color: #3EB489;
 }
 
