--- a/src/SoundSync/Profile/profile.css
+++ b/src/SoundSync/Profile/profile.css
@@ -36,6 +36,13 @@
     color: white;
 }
 
+.margin-left-300px {
+    margin-left: 630px;
+    text-decoration: none;
+    color: white;
+    margin-top: -80px;
+}
+
 .user-name {
     font-size: 80px;
     margin-right: 30px;
